--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -7,7 +7,7 @@
 <div class="scrollable">
     <div class="scrollable-content">
         <div class="translator-cover" ng-click="go('/me_info')">
-            <imageview data-rate="auto" src="staticImageUrl + user.bg_image"></imageview>
+            <imageview data-rate="750/422" src="staticImageUrl + user.bg_image"></imageview>
             <div class="tranlator-intro-bg">
                 <div class="translator-info left">
                     <span class="h3 block">{{user.nickname || user.telephone || user.email}}<i class="kk kk-icon" ng-class="{'kk-male':user.gender=='1','kk-female':user.gender !='1'}"></i></span>
