--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -9,7 +9,7 @@
 <div class="scrollable">
     <div class="scrollable-content">
         <div class="translator-cover">
-            <imageview data-rate="auto" src="staticImageUrl+translator.bg_image"></imageview>
+            <imageview data-rate="750/422" src="staticImageUrl+translator.bg_image"></imageview>
             <div class="tranlator-intro-bg">
                 <div class="translator-info left">
                     <span class="h3 block">
