--- a/src/less/common.less
+++ b/src/less/common.less
@@ -68,6 +68,9 @@
 .bg-danger {
 	background-color: @brand-danger;
 }
+.bg-primary {
+	background-color: @brand-primary;
+}
 .bg-gray {
 	background-color: @gray;
 }
