--- a/src/templates/authen_industry.html
+++ b/src/templates/authen_industry.html
@@ -33,7 +33,7 @@
                     <div class="pull-left section section-condensed bg-transparent" ui-turn-off="upload_panel">
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
-                    <h4 class="modal-title text-center">{{"Add Photo" | translate}}</h4>
+                    <h4 class="modal-title text-center">{{"Add" | translate}}</h4>
                 </div>
                 <div class="modal-body">
                     <div flow-init="{singleFile:true}" ng-controller="authenIndustryUploadController" class="uploader">
