--- a/src/templates/favorite.html
+++ b/src/templates/favorite.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="recommand-avatar">
+                <div class="recommand-avatar" ng-click="preview_translator(translator.collection_user_id)">
                     <img ng-src="{{staticImageUrl + translator.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
                 </div>
             </div>
