--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">{{"UE" | translate}}</div>
+<div ui-content-for="title">{{"UE lives" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()">
@@ -227,8 +227,8 @@
         <div class="modal-backdrop"></div>
         <div class="modal-dialog scrollable-dialog" style="margin:0">
             <div class="section" ui-turn-off="preview_panel" style="background-color:black">
-                <span class="btn text-white">
-                    <i class="fa fa-chevron-left"></i>
+                <span class="btn text-white text-very-big" style="height:42px;width:42px; border:1px solid white;-webkit-border-radius:100%;border-radius:100%;line-height:30px">
+                    X
                 </span>
             </div>
             <!-- banner -->
