--- a/src/templates/wallet.html
+++ b/src/templates/wallet.html
@@ -27,6 +27,11 @@
                 <span class="list-group-item-text">{{"Withdraw" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
+            <a ng-href="#/trade_records" class="list-group-item">
+                <span class="list-group-item-text">{{"Transaction Records" | translate}}</span>
+                <i class="text-gray-light fa fa-chevron-right pull-right"></i>
+            </a>
+            <div class="kk-line kk-5 kk-horizon"></div>
             <a ng-href="#/modify_trade_password" class="list-group-item">
                 <span class="list-group-item-text">{{"Payment Password" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
