--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -2,7 +2,7 @@
 <div ui-content-for="title">{{"Select Language" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
-	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
+    <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
     <div class="scrollable-content">
@@ -68,6 +68,12 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="semi-auto semi-left-80">
+                            <div class="semi-fixed-left text-center semi-wide-80">
+                                <span class="btn section-wide text-ellipsis"></span>
+                            </div>
+                            <div class="text-right text-primary" style="margin-top:12px">{{"Based on Local Time"|translate}}</div>
                         </div>
                     </div>
                 </div>
@@ -279,7 +285,7 @@
     </div>
 </div>
 <div ui-content-for="modals">
-     <div class="modal" ui-if="modal2" ui-state='modal2'>
+    <div class="modal" ui-if="modal2" ui-state='modal2'>
         <div class="modal-backdrop in"></div>
         <div class="modal-dialog" style="margin-top:50%;">
             <div class="modal-content">
