--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -27,7 +27,7 @@
                     </select>
                 </div>
                 <div class="text-right section large bg-transparent" style="margin-top:150px">
-                    <button type="button" class="btn btn-success" ng-disabled="!(choosen_language.to && choosen_language.from) || choosen_language.to == choosen_language.from" ui-set="{step:2}">{{"Next" | translate}}</button>
+                    <button type="button" class="btn btn-success" ng-disabled="!(choosen_language.to && choosen_language.from) || choosen_language.to == choosen_language.from" ng-click="queryMinPrice()">{{"Next" | translate}}</button>
                 </div>
             </div>
             <!-- step 2 -->
@@ -73,6 +73,12 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="semi-auto semi-left-80">
+                            <div class="semi-fixed-left text-center semi-wide-80">
+                                <span class="btn section-wide text-ellipsis"></span>
+                            </div>
+                            <div class="text-right text-primary" style="margin-top:12px">{{"Based on Local Time"|translate}}</div>
                         </div>
                     </div>
                 </div>
