--- a/src/templates/trade_records.html
+++ b/src/templates/trade_records.html
@@ -19,7 +19,7 @@
 					<div class="">{{"xx of the total price is chareged as service fee."|translate:translate_with_value(rate)}}</div>
 				</div>
 				<div class="col-xs-3 text-center">
-					<div ng-if="record.type ==1">{{"Paid"|translate}}</div>
+					<div ng-if="record.type ==1">{{"paid"|translate}}</div>
 					<div ng-if="record.type ==2">{{"Received"|translate}}</div>
 					<div class="">{{record.get_money}}</div>
 					<div class="" ng-if="record.type == 2">{{record.rate_str}}</div>
